  * One-to-many association support in Form/GridPanel reworked to use the foreign id instead of a string. This gives us more flexibility about what to display in the association column/field, and also provides for performance improvements (no more need to search for the associated record based on the value provided from the column/field).

* bug fix
  * Long-standing visual issues with datetime columns in grid panel are solved.

= v0.6.3 - 2011-01-14
* compatibility with netzke-core 0.6.5

* refactoring
  * GridPanel code restructured, using the new +js_mixin+ method

* bug fix
  * GridPanel respects strong_default_attrs
  * TabPanel doesn't fire multiple load requests per tab in case of lazy-loaded tabs and fast clicking
  * Filtering/sorting on virtual columns is now disabled by default
  * Filtering on date columns

* enhancements
  * I18n for Grid/FormPanel
  * new +getter+ config option for columns/fields, a lambda receiving the record as parameter
  * new +setter+ config option for columns/fields, a lambda receiving the record as first parameter, new value as the second
  * GridPanel passes columns' default values to the "Add in form" form
  * FormPanel can now be used without specifying a model
  * New +commalistcbg+ form field for checkboxes, where boxLabels of selected checkboxes are serialized into comma-separated string (the separator is configurable)
  * New +nradiogroup+ form field for radio buttons, where the value is defined by the boxLabel of the selected radio button
  * New +no_binding+ option for configuring a form field. Set it to "true" when you don't want Netzke to expand the field configuration based on the +name+ property. May be needed in some cases, e.g. when using checkboxes/radio buttons in the form.