@@ -116,6 +116,27 @@
     // After we created the record (model), we can get rid of the meta column
     this.columns.remove(metaColumn);
 
+    // Prepare column model config with columns in the correct order
+    var colModelConfig = [];
+
+    Ext.each(this.columnsOrder, function(c) {
+      var mainColConfig;
+      Ext.each(this.columns, function(oc) {
+        if (c.name === oc.name) {
+          mainColConfig = oc;
+          return false;
+        }
+      });
+
+      colModelConfig.push(Ext.apply(mainColConfig, c));
+    }, this);
+
+    // We don't need original columns any longer
+    delete this.columns;
+
+    // ... instead - define a custom column model
+    this.colModel = new Ext.grid.ColumnModel(colModelConfig);
+
     // Drag'n'Drop
     if (this.enableRowsReordering){
       this.ddPlugin = new Ext.ux.dd.GridDragDropRowOrder({
@@ -157,19 +178,10 @@
     }, this);
 
     // HttpProxy that uses our custom connection
-    var httpProxy = new Ext.data.HttpProxy(connection);
+    this.proxy = new Ext.data.HttpProxy(connection);
 
     // Data store
-    this.store = new Ext.data.Store({
-        pruneModifiedRecords: true,
-        proxy: this.proxy = httpProxy,
-        reader: new Ext.data.ArrayReader({root: "data", totalProperty: "total", successProperty: "success", id:0}, this.Row),
-        remoteSort: true,
-        listeners:{'loadexception':{
-          fn:this.loadExceptionHandler,
-          scope:this
-        }}
-    });
+    this.store = this.buildStore();
 
     // Normalize bottom bar
     this.bbar = (this.enablePagination) ? new Ext.PagingToolbar({
@@ -184,11 +196,13 @@
     // Selection model
     if (!this.sm) this.sm = new Ext.grid.RowSelectionModel();
 
+    this.view = this.buildView();
+
     // Now let Ext.grid.EditorGridPanel do the rest (original initComponent)
     Netzke.classes.Basepack.GridPanel.superclass.initComponent.call(this);
 
     // Persistence-related events
-    if (this.persistentConfig) {
+    if (this.persistence) {
       // Hidden change event
       this.getColumnModel().on('hiddenchange', this.onColumnHiddenChange, this);
 
@@ -258,6 +272,23 @@
         });
       }
     }, this);
+  },
+
+  buildStore: function() {
+    return new Ext.data.Store({
+      pruneModifiedRecords: true,
+      proxy: this.proxy,
+      reader: new Ext.data.ArrayReader({root: "data", totalProperty: "total", successProperty: "success", id:0}, this.Row),
+      remoteSort: true,
+      listeners:{'loadexception':{
+        fn:this.loadExceptionHandler,
+        scope:this
+      }}
+    });
+  },
+
+  buildView: function() {
+    return null;
   },
 
   filterTypeForAttrType: function(attrType){
