@@ -7,6 +7,7 @@
   * New, improved advanced search for GridPanel and PagingFormPanel.
   * Slightly optimized selenium tests (no artificial sleeping whenever possible)
   * One-to-many association support in Form/GridPanel reworked to use the foreign id instead of a string. This gives us more flexibility about what to display in the association column/field, and also provides for performance improvements (no more need to search for the associated record based on the value provided from the column/field).
+  * GridPanel now memorizes its columns visibility, position and size (when :persistence is set to true)
 
 * bug fix
   * Long-standing visual issues with datetime columns in grid panel are solved.
